# apiwatch

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IDEA.md  LICENSE  README.md  ROADMAP.md  action.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Formula/: apiwatch.rb
Scoop/: apiwatch.json
compat/: specs.json
docs/: change-rules.md  lockfile-spec.md
docs/benchmarks/: phase-1-lock-size-report.json  phase-1-lock-size-report.md
scripts/: fetch_compat_specs.py  release_smoke.py  update_package_metadata.py
scripts/tests/: test_fetch_compat_specs.py  test_update_package_metadata.py
src/: cli.rs  lib.rs  lock_size.rs  main.rs  remote.rs
src/contract/: mod.rs
src/diff/: mod.rs
src/lockfile/: mod.rs
src/observed/: mod.rs
src/openapi/: mod.rs
src/output/: mod.rs
testdata/observed/: portfolio-empty.json  portfolio-map-initial.json  portfolio-map-matching.json  portfolio-map-merged.json  portfolio-map-scalar-drift.json  portfolio-map-value-drift.json  portfolio-matching.json  portfolio-missing-required.json  portfolio-populated.json  portfolio-type-drift.json
testdata/openapi/: auth_api_key_added_new.yaml  auth_basic_added_new.yaml  auth_bearer_added_new.yaml  auth_oauth2_added_new.yaml  composition_allof_changed_new.yaml  composition_allof_changed_old.yaml  composition_anyof_changed_new.yaml  composition_anyof_changed_old.yaml  composition_oneof_changed_new.yaml  composition_oneof_changed_old.yaml  endpoint_removed_old.yaml  invalid_json.json  invalid_yaml.yaml  lock_ordering.yaml  no_breaking_new.yaml  (+70 more)
tests/: cli_diff.rs  cli_lock.rs  cli_metadata.rs  cli_record.rs  cli_verify.rs  compat.rs
tools/lock-size-report/: Cargo.toml
tools/lock-size-report/src/: main.rs  report.rs
tools/lock-size-report/tests/: cli.rs
(+30 files in other folders)
