[package]
name = "apiwatch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lock, diff, and verify the APIs your code depends on."
repository = "https://github.com/hitesh0861/apiwatch"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
