[package]
name = "apiwatch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lock, diff, and verify the APIs your code depends on."
repository = "https://github.com/hitesh518-collab/apiwatch"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
openapiv3 = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
