[package]
name = "apiwatch-lock-size-report"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
publish = false

[dependencies]
anyhow = "1"
apiwatch = { path = "../.." }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
